// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text List component should render correctly as ordered list 1`] = `
<p-text-list
  listType="ordered"
>
  <p-text-list-item>
    1st Textlist item
  </p-text-list-item>
  <p-text-list-item>
    2nd Textlist item
  </p-text-list-item>
  <p-text-list-item>
    3rd Textlist item
  </p-text-list-item>
</p-text-list>
`;

exports[`Text List component should render correctly as unordered list 1`] = `
<p-text-list>
  <p-text-list-item>
    1st Textlist item
  </p-text-list-item>
  <p-text-list-item>
    2nd Textlist item
  </p-text-list-item>
  <p-text-list-item>
    3rd Textlist item
  </p-text-list-item>
</p-text-list>
`;
